package DP.Tries.Factory.PizzaFactory.Pizzas.Contents;

public enum Nuts {
  ALMONDS,
  PEANUTS,
  PISTACHIOS,
  PINE_NUTS,
  WALNUTS
}
