package DP.Tries.Factory.PizzaFactory.Pizzas.Contents;

public enum Sauces {
  CHILI,
  TOMOTO,
  PARMESAN,
  MONTEREY
}
