package DP.Tries.Factory.PizzaFactory.Pizzas.Contents;

public enum VegPizzaContents {
  CHEESE,
  CORN,
  MAYONEESE,
  MARGHERITA,
  CARROTS,
  TOMATOS,
  MUSHROOMS,
  ONIONS,
  OLIVES,
  BEANS,
  PEPPERS,
  SPINACH,
  BLACK_OLIVES,
  CAPSICUM,
  GRILLED_MUSHROOM,
  JALAPENO
}
